objects/ASI_MFM_Rental_Request__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_ActualSpendingwithNewContract_1__c</fullName>
        <label>Actual Spending with New Contract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ActualSpendingwithNewContract_2__c</fullName>
        <label>Actual Spending with New Contract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rental_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU</label>
        <referenceTo>ASI_MFM_BU__c</referenceTo>
        <relationshipName>Rental_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Budget_1__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Budget_2__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Budget_on_Lease__c</fullName>
        <label>Budget on Lease</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Building_Level__c</fullName>
        <label>Building Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Building_Name_1__c</fullName>
        <label>Building Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Building_Name_2__c</fullName>
        <label>Building Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Building_Name_3__c</fullName>
        <label>Building Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CAPX_Budget__c</fullName>
        <label>CAPX Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CAPX_Depreciation_Residual__c</fullName>
        <inlineHelpText>备注： 截止最终租赁日
Remark: Up to lease end day</inlineHelpText>
        <label>CAPX Depreciation Residual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_City_Level__c</fullName>
        <formula>TEXT(ASI_MFM_City__r.ASI_CRM_CN_City_Tier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City</label>
        <referenceTo>ASI_CRM_City__c</referenceTo>
        <relationshipName>Rental_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Comparable_LeasingRate_Benchmark__c</fullName>
        <label>Comparable Leasing Rate Benchmark</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Current_Annual_Lease_Cost__c</fullName>
        <label>Current Annual Lease Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Current_Density__c</fullName>
        <formula>ASI_MFM_Current_Rented_Space__c / ASI_MFM_Headcount_in_Current_Office__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Density</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Current_Lease_End_Day__c</fullName>
        <label>Current Lease End Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Current_Leasing_Renovation__c</fullName>
        <label>Current Leasing &amp; Renovation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Current_Rented_Space__c</fullName>
        <label>Current Rented Space (㎡)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Due_Day_Renewal_Inform__c</fullName>
        <label>Due Day-Renewal Inform</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Fiscal_Year_1__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY1516</fullName>
                </value>
                <value>
                    <fullName>FY1617</fullName>
                </value>
                <value>
                    <fullName>FY1718</fullName>
                </value>
                <value>
                    <fullName>FY1819</fullName>
                </value>
                <value>
                    <fullName>FY1920</fullName>
                </value>
                <value>
                    <fullName>FY2021</fullName>
                </value>
                <value>
                    <fullName>FY2122</fullName>
                </value>
                <value>
                    <fullName>FY2223</fullName>
                </value>
                <value>
                    <fullName>FY2324</fullName>
                </value>
                <value>
                    <fullName>FY2425</fullName>
                </value>
                <value>
                    <fullName>FY2526</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Fiscal_Year_2__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY1516</fullName>
                </value>
                <value>
                    <fullName>FY1617</fullName>
                </value>
                <value>
                    <fullName>FY1718</fullName>
                </value>
                <value>
                    <fullName>FY1819</fullName>
                </value>
                <value>
                    <fullName>FY1920</fullName>
                </value>
                <value>
                    <fullName>FY2021</fullName>
                </value>
                <value>
                    <fullName>FY2122</fullName>
                </value>
                <value>
                    <fullName>FY2223</fullName>
                </value>
                <value>
                    <fullName>FY2324</fullName>
                </value>
                <value>
                    <fullName>FY2425</fullName>
                </value>
                <value>
                    <fullName>FY2526</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_From_1__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_From_2__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_From_3__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Headcount_Forecast_in_3_years__c</fullName>
        <label>Headcount Forecast in 3 years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Headcount_in_Current_Office__c</fullName>
        <label>Headcount in Current Office</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Lead_Time__c</fullName>
        <label>Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Leasing_New__c</fullName>
        <label>Leasing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal Only</fullName>
                </value>
                <value>
                    <fullName>Renewal with Expansion</fullName>
                </value>
                <value>
                    <fullName>Moving</fullName>
                </value>
                <value>
                    <fullName>New Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Leasing_Rate_1__c</fullName>
        <label>Leasing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Leasing_Rate_2__c</fullName>
        <label>Leasing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Leasing_Rate_3__c</fullName>
        <label>Leasing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Leasing_Rate_Proposal__c</fullName>
        <label>Leasing Rate Proposal</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Leasing_Renovation_Proposal__c</fullName>
        <label>Leasing &amp; Renovation Proposal</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Leasing_Renovation_Request__c</fullName>
        <label>Leasing &amp; Renovation Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Leasing__c</fullName>
        <label>Leasing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Official Office yet</fullName>
                </value>
                <value>
                    <fullName>Official Office Rent Already</fullName>
                </value>
                <value>
                    <fullName>Renewal Only</fullName>
                </value>
                <value>
                    <fullName>Renewal with Expansion</fullName>
                </value>
                <value>
                    <fullName>Moving</fullName>
                </value>
                <value>
                    <fullName>New Office</fullName>
                </value>
                <value>
                    <fullName>Newly Rent Office</fullName>
                    <isActive>false</isActive>
                    <label>Newly Rent Office</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Lift_Zone__c</fullName>
        <label>Lift Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_New_Density_Expansion__c</fullName>
        <formula>( ASI_MFM_Proposed_New_ExpansionSpace__c +  ASI_MFM_Current_Rented_Space__c )/ ASI_MFM_Headcount_Forecast_in_3_years__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Density(Expansion)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_New_Density__c</fullName>
        <formula>ASI_MFM_Proposed_New_Space__c / ASI_MFM_Headcount_Forecast_in_3_years__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Density</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Project_Name_City_Content__c</fullName>
        <label>Project Name (City+Content)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Proposed_New_ExpansionSpace__c</fullName>
        <label>Proposed New ExpansionSpace (㎡)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Proposed_New_Space__c</fullName>
        <label>Proposed New Space (㎡)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Related_Kickoff_Form_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Kickoff Form ID</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Rental Approval, CN Rental Approval RO</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Rental_Request__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Rental Request RO</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Renovation Form, CN Renovation Form RO</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Rental_Request__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Rental Approval, CN Rental Approval RO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Rental_Request__c</referenceTo>
        <relationshipLabel>Leasing &amp; Renovation Requests</relationshipLabel>
        <relationshipName>Rental_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Reminding_Date__c</fullName>
        <formula>ASI_MFM_Due_Day_Renewal_Inform__c -  ASI_MFM_Lead_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reminding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Renovation_Area__c</fullName>
        <label>Renovation Area(㎡)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Renovation_New__c</fullName>
        <label>Renovation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Renovation</fullName>
                </value>
                <value>
                    <fullName>Partial Renovation</fullName>
                </value>
                <value>
                    <fullName>New Renovation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Renovation__c</fullName>
        <label>Renovation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Renovation</fullName>
                </value>
                <value>
                    <fullName>Renovated Already</fullName>
                </value>
                <value>
                    <fullName>Partial Renovation</fullName>
                </value>
                <value>
                    <fullName>New Renovation</fullName>
                </value>
                <value>
                    <fullName>Renovation</fullName>
                    <isActive>false</isActive>
                    <label>Renovation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Send_Email_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Space_1__c</fullName>
        <label>Space(㎡)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Space_2__c</fullName>
        <label>Space(㎡)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Space_3__c</fullName>
        <label>Space(㎡)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Stage_1_Preparation__c</fullName>
        <label>Stage 1 : Preparation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Stage_2_Internal_Process__c</fullName>
        <label>Stage 2: Internal Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Stage_3_Execution__c</fullName>
        <label>Stage 3: Execution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sys_Approver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rental_RequestsE6w3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sys_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rental_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sys_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rental_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Task_1__c</fullName>
        <label>Task</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Task_2__c</fullName>
        <label>Task</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Task_3__c</fullName>
        <label>Task</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_To_1__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_To_2__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_To_3__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Total_Contract_Amount__c</fullName>
        <label>Total Contract Amount</label>
        <summarizedField>ASI_MFM_Rental_Request_Line__c.ASI_MFM_Total_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_MFM_Rental_Request_Line__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>CN Rental Contract Line</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_MFM_Rental_Request_Line__c.ASI_MFM_Detail__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_MFM_Rental_Request_Line__c.ASI_MFM_Rental_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Leasing &amp; Renovation Request</label>
    <listViews>
        <fullName>Leasing_Approval_All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Project_Name_City_Content__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_City__c</columns>
        <columns>ASI_MFM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Approval,ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Approval_RO</value>
        </filters>
        <label>Leasing Approval All</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_FOC_BA_Applier</role>
            <role>ASI_FOC_Financial_Controller</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leasing_Approval_Central</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Approval,ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Approval_RO</value>
        </filters>
        <filters>
            <field>ASI_MFM_BU__c</field>
            <operation>equals</operation>
            <value>PRCN</value>
        </filters>
        <label>Leasing Approval HQ</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_CN_Finance_Manager_C</role>
            <roleAndSubordinates>ASI_FOC_Admin_Mgr</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leasing_Approval_Central1</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Project_Name_City_Content__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Approval,ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Approval_RO</value>
        </filters>
        <filters>
            <field>ASI_MFM_BU__c</field>
            <operation>equals</operation>
            <value>Central</value>
        </filters>
        <label>Leasing Approval Central</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_CN_Assoicate_Division_Director_GC_JS_AH_SH_ON</role>
            <role>ASI_CN_Finance_Manager_C</role>
            <role>ASI_CN_HR_Central_AD</role>
            <role>ASI_CN_Sales_Coordinator_GC_ZJ</role>
            <roleAndSubordinates>ASI_CN_Finance_Manager_C</roleAndSubordinates>
            <roleAndSubordinates>ASI_CN_HR_Central_AD</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leasing_Approval_East</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Approval,ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Approval_RO</value>
        </filters>
        <filters>
            <field>ASI_MFM_BU__c</field>
            <operation>equals</operation>
            <value>East</value>
        </filters>
        <label>Leasing Approval East</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_CN_Finance_Manager_E</role>
            <role>ASI_CN_HR_East_AD</role>
            <roleAndSubordinates>ASI_CN_Finance_Manager_E</roleAndSubordinates>
            <roleAndSubordinates>ASI_CN_HR_East_AD</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leasing_Approval_NW</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Approval,ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Approval_RO</value>
        </filters>
        <filters>
            <field>ASI_MFM_BU__c</field>
            <operation>equals</operation>
            <value>NW</value>
        </filters>
        <label>Leasing Approval NW</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_CN_Finance_Manager_NW</role>
            <role>ASI_CN_HR_North_Applier_2</role>
            <role>ASI_CN_Regional_VP_North_West_China</role>
            <roleAndSubordinates>ASI_CN_Finance_Manager_NW</roleAndSubordinates>
            <roleAndSubordinates>ASI_CN_Regional_VP_North_West_China</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leasing_Approval_North</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Approval,ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Approval_RO</value>
        </filters>
        <filters>
            <field>ASI_MFM_BU__c</field>
            <operation>equals</operation>
            <value>North</value>
        </filters>
        <label>Leasing Approval North</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_CN_Finance_Manager_GN</role>
            <role>ASI_CN_HR_North_SM</role>
            <roleAndSubordinates>ASI_CN_Finance_Manager_GN</roleAndSubordinates>
            <roleAndSubordinates>ASI_CN_HR_North_SM</roleAndSubordinates>
            <roleAndSubordinates>ASI_CN_Regional_VP_North_China</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leasing_Approval_SW</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Approval,ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Approval_RO</value>
        </filters>
        <filters>
            <field>ASI_MFM_BU__c</field>
            <operation>equals</operation>
            <value>SW</value>
        </filters>
        <label>Leasing Approval SW</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_CN_Finance_Manager_GS</role>
            <role>ASI_CN_HR_South_Applier_2</role>
            <role>ASI_CN_HR_South_SM</role>
            <roleAndSubordinates>ASI_CN_Finance_Manager_GS</roleAndSubordinates>
            <roleAndSubordinates>ASI_CN_HR_South_SM</roleAndSubordinates>
            <roleAndSubordinates>ASI_CN_Sales_Rep_CD_On_OFF</roleAndSubordinates>
            <roleAndSubordinates>ASI_CN_Sales_Rep_Yunnan</roleAndSubordinates>
            <roleAndSubordinates>ASI_FOC_HR_AD</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leasing_Approval_South</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Approval,ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Approval_RO</value>
        </filters>
        <filters>
            <field>ASI_MFM_BU__c</field>
            <operation>equals</operation>
            <value>South</value>
        </filters>
        <label>Leasing Approval South</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_CN_Finance_Manager_GS</role>
            <role>ASI_CN_HR_South_Applier_2</role>
            <role>ASI_CN_Sales_Coordinator_GCS</role>
            <role>ASI_CN_Sales_Coordinator_GDW</role>
            <role>ASI_CN_Sales_Coordinator_GGZ</role>
            <role>ASI_CN_Sales_Coordinator_GS_SZ</role>
            <roleAndSubordinates>ASI_CN_Finance_Manager_GS</roleAndSubordinates>
            <roleAndSubordinates>ASI_CN_HR_South_SM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leasing_Request_All</fullName>
        <columns>ASI_MFM_Project_Name_City_Content__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Request,ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Request_RO</value>
        </filters>
        <label>Leasing Request All</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_FOC_Financial_Controller</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leasing_Request_Central1</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Project_Name_City_Content__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Request,ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Request_RO</value>
        </filters>
        <filters>
            <field>ASI_MFM_BU__c</field>
            <operation>equals</operation>
            <value>Central</value>
        </filters>
        <label>Leasing Request Central</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_CN_Assoicate_Division_Director_GC_JS_AH_SH_ON</role>
            <role>ASI_CN_Finance_Manager_C</role>
            <role>ASI_CN_HR_Central_AD</role>
            <role>ASI_CN_Sales_Coordinator_GC_ZJ</role>
            <roleAndSubordinates>ASI_CN_Finance_Manager_C</roleAndSubordinates>
            <roleAndSubordinates>ASI_CN_HR_Central_AD</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leasing_Request_East</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Status__c</columns>
        <columns>ASI_MFM_Department__c</columns>
        <columns>ASI_MFM_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Request,ASI_MFM_Rental_Request__c.ASI_MFM_CN_Rental_Request_RO</value>
        </filters>
        <filters>
            <field>ASI_MFM_BU__c</field>
            <operation>equals</operation>
            <value>East</value>
        </filters>
        <label>Leasing Request East</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_CN_Finance_Manager_E</role>
            <role>ASI_CN_HR_East_AD</role>
            <roleAndSubordinates>ASI_CN_Finance_Manager_E</roleAndSubordinates>
            <roleAndSubordinates>ASI_CN_HR_East_AD</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>